fixing a style issue to align the name fields

--- a/bootstrap/main.css
+++ b/bootstrap/main.css
@@ -239,7 +239,7 @@ table.mocal .event {
 }
 .addedit input[type="text"] {
     height: 1em;
-    width: 15em;
+    width: 10em;
 }
 
 .addedit select {
